{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 260,
  "lineage": "e2975255-426c-73b1-d1b5-0d7eb8c75b38",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "graphql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "guided-access-logs-staging",
                "bucket_prefix": "graphql",
                "enabled": true,
                "interval": 5
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:132788847502:loadbalancer/guided-graphql-staging",
            "availability_zones": [
              "eu-west-2a",
              "eu-west-2b",
              "eu-west-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "guided-graphql-staging-747100833.eu-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:5000/health",
                "timeout": 25,
                "unhealthy_threshold": 2
              }
            ],
            "id": "guided-graphql-staging",
            "idle_timeout": 60,
            "instances": [
              "i-0b3e43f18bd530a32"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 5000,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:eu-west-2:132788847502:certificate/e88b98e2-e7a4-4a9a-b83c-2836006c951a"
              }
            ],
            "name": "guided-graphql-staging",
            "security_groups": [
              "sg-0a1890e75a215e953"
            ],
            "source_security_group": "132788847502/guided-server-staging",
            "source_security_group_id": "sg-0a1890e75a215e953",
            "subnets": [
              "subnet-196eef63",
              "subnet-21ab7c6d",
              "subnet-f8c28791"
            ],
            "tags": {
              "Name": "guided-graphql-staging"
            },
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_acm_certificate_validation.cert",
            "aws_instance.server",
            "aws_s3_bucket.access_logs",
            "aws_security_group.server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-014ae7e330e2651dc",
            "arn": "arn:aws:ec2:eu-west-2:132788847502:instance/i-0b3e43f18bd530a32",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3e43f18bd530a32",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "guided-server",
            "monitoring": true,
            "primary_network_interface_id": "eni-01c76320c1c74835c",
            "private_dns": "ip-172-31-17-141.eu-west-2.compute.internal",
            "private_ip": "172.31.17.141",
            "public_dns": "ec2-18-130-225-131.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.225.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f3955142c63444da",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "guided-server-staging"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-196eef63",
            "tags": {
              "Name": "guided-server-staging"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a1890e75a215e953"
            ]
          },
          "dependencies": [
            "aws_key_pair.server",
            "aws_route53_record.database",
            "aws_security_group.server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-079293e9c50e03bf6",
            "owner_id": "132788847502",
            "vpc_id": "vpc-0ef13b9393b0df425"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "websockets",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:132788847502:loadbalancer/app/guided-websockets-staging/d23d5060ab695600",
            "arn_suffix": "app/guided-websockets-staging/d23d5060ab695600",
            "dns_name": "guided-websockets-staging-1642543743.eu-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:132788847502:loadbalancer/app/guided-websockets-staging/d23d5060ab695600",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "guided-websockets-staging",
            "security_groups": [
              "sg-04aaaec6ada6628b9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04438473136491d4c"
              },
              {
                "subnet_id": "subnet-0d477e34516c65e9a"
              }
            ],
            "subnets": [
              "subnet-04438473136491d4c",
              "subnet-0d477e34516c65e9a"
            ],
            "tags": {
              "Name": "guided-websockets-staging"
            },
            "vpc_id": "vpc-0ef13b9393b0df425",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_s3_bucket.access_logs",
            "aws_security_group.graphql",
            "aws_subnet.primary",
            "aws_subnet.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "websockets",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "graphql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:132788847502:security-group/sg-04aaaec6ada6628b9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04aaaec6ada6628b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "guided-graphql-staging",
            "name_prefix": null,
            "owner_id": "132788847502",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ef13b9393b0df425"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:132788847502:security-group/sg-0a1890e75a215e953",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1890e75a215e953",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "guided-server-staging",
            "name_prefix": null,
            "owner_id": "132788847502",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-8cf586e4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:132788847502:subnet/subnet-0d477e34516c65e9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d477e34516c65e9a",
            "map_public_ip_on_launch": false,
            "owner_id": "132788847502",
            "vpc_id": "vpc-0ef13b9393b0df425"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:132788847502:subnet/subnet-04438473136491d4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-04438473136491d4c",
            "map_public_ip_on_launch": false,
            "owner_id": "132788847502",
            "vpc_id": "vpc-0ef13b9393b0df425"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:132788847502:vpc/vpc-0ef13b9393b0df425",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03c881980583a3a2c",
            "default_route_table_id": "rtb-049f4c28c18842afe",
            "default_security_group_id": "sg-092a647b6624553cf",
            "dhcp_options_id": "dopt-fc632994",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ef13b9393b0df425",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-049f4c28c18842afe",
            "owner_id": "132788847502"
          }
        }
      ]
    }
  ]
}